# RawlsianAgents

./: .env.template  .gitignore  CLAUDE.md  LICENSE  README.md  adk_research_agent.py  config.py  couchbase_utils.py  crawl_talks.py  embeddinggeneration.py  extract_events.py  main.py  pyproject.toml  requirements.txt  talk_suggestions_app.py
.claude/: settings.json
.githooks/: pre-commit
.github/: copilot-instructions.md
data/LeVan vs LeVan/: initial_agreement.md
docs/: Makefile  QUICK_REFERENCE.md  README.md  conf.py  index.rst  modules.rst
docs/api/: claims_extractor.rst  config.rst  rawlsianagents.claims_extractor.rst  rawlsianagents.config.rst  rawlsianagents.negotiation_swarm.rst  rawlsianagents.rst  rawlsianagents.utils.metrics.rst  rawlsianagents.utils.rst
examples/: distribution_analysis.py  extract_claims.py  negotiate_claim.py  tier3_verbose.py
examples/outputs/: negotiation_stats.json
src/rawlsianagents/: __init__.py  claims_extractor.py  config.py  negotiation_swarm.py  negotiation_swarm_v2.py
src/rawlsianagents/utils/: __init__.py  metrics.py
