[project]
name = "rawlsianagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dspy>=3.1.3",
    "langchain>=1.2.10",
    "ollama>=0.6.1",
    "openai>=2.20.0",
    "psycopg>=3.3.2",
    "ragas>=0.4.3",
    "sphinx-rtd-theme>=3.1.0",
    "streamlit>=1.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rawlsianagents"]

